convert result json to HTML table

--- a/index.html
+++ b/index.html
@@ -2,21 +2,29 @@
 <html>
 <head>
     <title>SQL Playground</title>
-    <!-- SQL.js의 wasm 파일 위치를 지정해야 합니다 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.5.0/sql-wasm.js"></script>
     <style>
-        textarea, pre {
+        textarea, table, pre {
             width: 90%;
-            height: 150px;
             margin: 10px;
+        }
+        textarea, pre {
+            height: 150px;
+        }
+        table {
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 5px;
         }
     </style>
 </head>
 <body>
     <h1>SQL Playground</h1>
-    <textarea id="sqlInput">-- 여기에 SQL 쿼리를 입력하세요\nSELECT 'Hello, SQL.js!';</textarea>
+    <textarea id="sqlInput">-- 여기에 SQL 쿼리를 입력하세요\nSELECT 'Hello, SQL.js!' AS greeting;</textarea>
     <button id="runButton" disabled>실행</button>
-    <pre id="output">결과가 여기에 표시됩니다.</pre>
+    <div id="output">결과가 여기에 표시됩니다.</div>
 
     <script>
         var db;
@@ -34,10 +42,29 @@
             var input = document.getElementById('sqlInput').value;
             try {
                 var results = db.exec(input);
-                document.getElementById('output').textContent = JSON.stringify(results, null, 2);
+                if (results.length) {
+                    document.getElementById('output').innerHTML = toHTMLTable(results[0]);
+                } else {
+                    document.getElementById('output').textContent = '결과 없음';
+                }
             } catch (e) {
                 document.getElementById('output').textContent = '오류: ' + e.message;
             }
+        }
+
+        function toHTMLTable(result) {
+            var html = '<table><thead><tr>';
+            result.columns.forEach(function(column) {
+                html += '<th>' + column + '</th>';
+            });
+            html += '</tr></thead><tbody>';
+            result.values.forEach(function(row) {
+                html += '<tr>' + row.map(function(cell) {
+                    return '<td>' + cell + '</td>';
+                }).join('') + '</tr>';
+            });
+            html += '</tbody></table>';
+            return html;
         }
 
         document.getElementById('runButton').onclick = runSQL;
