show result message for DDL

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 if (results.length) {
                     document.getElementById('output').innerHTML = toHTMLTable(results[0]);
                 } else {
-                    document.getElementById('output').textContent = '결과 없음';
+                    // DDL 명령이나 결과가 없는 쿼리에 대한 피드백
+                    document.getElementById('output').textContent = '쿼리 실행 완료. 결과가 없습니다.';
                 }
             } catch (e) {
                 document.getElementById('output').textContent = '오류: ' + e.message;
