--- a/index.html
+++ b/index.html
@@ -42,11 +42,18 @@
             var input = document.getElementById('sqlInput').value;
             try {
                 var results = db.exec(input);
-                if (results.length) {
+
+                // 쿼리 결과에 따른 메시지 처리
+                if (input.trim().toUpperCase().startsWith("CREATE")) {
+                    document.getElementById('output').textContent = '테이블 생성 완료.';
+                } else if (input.trim().toUpperCase().startsWith("DROP")) {
+                    document.getElementById('output').textContent = '테이블 삭제 완료.';
+                } else if (input.trim().toUpperCase().startsWith("ALTER")) {
+                    document.getElementById('output').textContent = '테이블 수정 완료.';
+                } else if (results.length) {
                     document.getElementById('output').innerHTML = toHTMLTable(results[0]);
                 } else {
-                    // DDL 명령이나 결과가 없는 쿼리에 대한 피드백
-                    document.getElementById('output').textContent = '쿼리 실행 완료. 결과가 없습니다.';
+                    document.getElementById('output').textContent = '쿼리 실행 완료. 변경 사항 없음.';
                 }
             } catch (e) {
                 document.getElementById('output').textContent = '오류: ' + e.message;
