--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                     document.getElementById('output').textContent = '테이블 삭제 완료.';
                 } else if (input.trim().toUpperCase().startsWith("ALTER")) {
                     document.getElementById('output').textContent = '테이블 수정 완료.';
+                } else if (input.trim().toUpperCase().startsWith("INSERT")) {
+                    document.getElementById('output').textContent = '데이터 추가 완료.';
                 } else if (results.length) {
                     document.getElementById('output').innerHTML = toHTMLTable(results[0]);
                 } else {
