--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SQL Playground</title>
+    <title>SQL 놀이터</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.5.0/sql-wasm.js"></script>
     <style>
         textarea, table, pre {
@@ -18,14 +18,29 @@
             border: 1px solid black;
             padding: 5px;
         }
+        .header {
+            display: flex;
+            justify-content: flex-end;
+            padding: 10px;
+            /*background-color: #f5f5f5;*/
+        }
+        .header a {
+            text-decoration: none;
+            color: #007bff;
+        }
     </style>
 </head>
 <body>
-    <h1>SQL Playground</h1>
-    <textarea id="sqlInput">-- 여기에 SQL 쿼리를 입력하세요\nSELECT 'Hello, SQL.js!' AS greeting;</textarea>
-    <button id="runButton" disabled>실행</button>
-    <div id="output">결과가 여기에 표시됩니다.</div>
-
+    <div class="header">
+        <a href="https://wikidocs.net/book/1530" target="_blank">SQLite3로 가볍게 배우는 데이터베이스</a>
+    </div>
+    <div>
+        <h1>SQL 놀이터</h1>
+        <textarea id="sqlInput">-- 여기에 SQL 쿼리를 입력하세요
+SELECT '안녕, SQL.js!' AS greeting;</textarea>
+        <button id="runButton" disabled>실행</button>
+        <div id="output">결과가 아래에 표시됩니다.(여러 쿼리를 실행할 경우 마지막 쿼리의 결과만 표시됩니다.)</div>
+    </div>
     <script>
         var db;
         var config = {
